	  fully supported.
	* Support PEAP and TTLS with TLS 1.3.  This has been
	  tested with wpa_supplicant and Windows 11.
	* Add %{concat:foo[*] ;}, which concatenates a set
	  of attributes, separated by a character.
	* Added sample configuration for using Google LDAP.
	  See sites-available/google-ldap-auth, and
	  mods-available/google_ldap, and mods-available/cache_auth.

	Bug fixes
	* Ensure PBKDF2 always uses at least one iteration
	* Actually use the certificate in "realm_dir" hinted at by SNI.
	* Removed the use of "locate" during the "configure" phase.
	  Fixes #4318
	* Fix for showing incomplete home server list after deleting a
	  home server via radmin.
	* Call closedir() when reading certificates from a directory.
	  Found by Antonio Torres.  Fixes #4378.
	* If we read more than 16K of data in RadSec, then read it all.
	  Fixes #4388, patch from Aren Sandersen.
	* Fix information leak in compute_password_element() function
	  of EAP-PWD.  Found by Mohamed Sabt.
	* Fix crash in EAP-SIM when unknown attributes are sent.

FreeRADIUS 3.0.25 Thu 07 Oct 2021 12:00:00 EDT urgency=medium
	Feature improvements
	* Better debug output when proxying is disabled
	* Updates to support PostgreSQL 14 (#4251)

	Bug fixes
	* Add `correct_escapes` back into default configuration
	* Fix undeclared variable with some compile options (#4246)
	* Quiet erroneous debug output
	* Fix segfault when proxying to zombie home server
	* Fix resolving values to enum strings in rlm_rest (#4167)
	* Fix printing raw values rather than enum strings in rlm_couchbase (#4167)

FreeRADIUS 3.0.24 Wed 29 Sep 2021 12:00:00 EDT urgency=medium
	Feature improvements
	* Add sanitizer options to configure script.
	* Log information needed by Wireshark to decode TLS sessions.
	* Allow more liberal SQL commands in rlm_sql_map.
	* Update dictionary.apc, dictionary.h3c
	* Add new Acct-Status-Type Subsystem-On and Subsystem-Off.
	  See dictionary.iana and